$Id$

2.2.1
	Fix some strcpy's that could be vulnerable
	Remove an unused function

2.2.0
	Workaround to libzephyr on unnoticed zephyrs
	With smartnarrow and zpunt, include .d suffix and ^un prefix as
   	   part of the allowed regex for the relevant class or instance
	Cleanup of lots of bad sprintf usage

2.1.12
	Don't crash on mobile device AIM messages [BZ 20]
	Don't crash when sending to someone not on AIM buddy list [BZ 94]
	Fix overflow vulerability in zwrite.c and zcrypt.c
	Add stack protector and -D_FORTIFY_SOURCE=2 where possible
      	Fix hang [barnowl 4c46dfdebc294ca24fef59924f01688b8ee07dee]
	Fix segfault on missing subs [barnowl 99dabeed7de6d19acb50f1e73aa0bfe5f9469c02]
	Fix zcrypt bufffer size bug [barnowl 559076cd86edc3a8317819814dd5877b8bc7c3cb]
	Fix double free [barnowl e97c4a306ae2c9d2147d83da29fee59918198e70]
	Memory leak fix [barnowl c0a90c2c7ab97b9465c9873757faf312faa0021e]
	Memory leak fix [barnowl 95caa16b2e9ba10770d87d0955198c14c2d0e16a]
	Memory leak fix [barnowl 1716fed8c2650e46892cf6571555eac937266c6e]
	Add getstyle command [barnowl 216c73421653e3ef0e957aa9a9804e208a77c80e]
	Binary search for msgid [barnowl 0c8ab5eadbb6ecc97a120c91b9a824b33538c764]
	File-handle leak [barnowl e78397d6ac5da0de31a4e269c0ba7f3d691857a3]
	Fix delay in jump from top to bottom [barnowl 801b7ac63b962640debbcfd422cb9a60da5fea31]
	Load subs in chunks [barnowl 93e883d60051b80bf6d35391f9d76fd7dfd198e3]
	Load subs in chunks [barnowl f6050ee9b0a171a5031f84409eb181062afacd18]
	Better zsig logging [barnowl d857b667a5a9b108b1a2a26b4a5513bef2b53f80]
	free() -> owlfree() [barnowl d524c838ac7c115628424b8ac171c3489622ea3a]
	Escape AIM users in smartfilters [barnowl af9b92e3e7ccb7de276a94b5c7e5861b24e71eff]
	Better regex escape chars [barnowl 80e54a7631f091be8c9762adb9746bad38104738]
	Deal with quotes in smart filters [barnowl 4099cf83702763fa8d1efc4f1582a605431bdb77]
	Deal with 0 length zephyr fields [barnowl 128171aaf7cefa91a4bb1eada93a19d8fd0c355c]